# zero

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
example/pages/: index.html
example/static/: styles.css
src/: lib.rs  main.rs  server.rs  ws.rs
