[package]
name = "zero"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
