[package]
name = "zero"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.31"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
notify = "8.2.0"
sha1 = "0.10.6"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7.16", features = ["full"] }
